_css/basic.css
/* ==================================================================
    Header and Nav
================================================================== */

nav {
  width: 100%;
  display: inline-block;
}

nav ul {
  padding-left: 0;
  margin-top: 0;
  margin-bottom: 0;
}

nav li {
  display: inline-block;
}

nav li a {
  color: #004de6;
  text-decoration: none;
  font-size: 18px;
  font-weight: bold;
  display: inline;
  float: center;
  padding-top: 10px;
  padding-right: 2px;
  padding-left: 2px;
  padding-bottom: 5px;
  margin-left: 7px;
  margin-right: 7px;
  transition: color 0.3s ease;
}

header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  flex-wrap: nowrap;
  overflow: hidden;
  position: sticky;
  top: 0;
  z-index: 1;
  background-color: #fff;
  opacity: 0.95;
}

header .blog-name {
  width: 35%;
  display: inline-block;
  text-align: left;
  font-size: 18px;
  font-family: "Lucida Console", Monaco, monospace;
  padding-top: 10px;
}

header .blog-name a {
  color: #a6a2a0;
  text-decoration: none;
}

header li a:hover {
  color: black;
}

#menu-icon {
  display: none;
  position: relative;
  overflow: hidden;
}

@media (max-width: 480px) {
  header {
    padding-left: 6%;
    padding-right: 6%;
  }
}

@media (min-width: 481px) {
  header {
    padding-left: 12.5%;
    padding-right: 12.5%;
  }
}

/* wide display: enforce maximum width of header to match content */
@media (min-width: 940px) {
  header {
    width: 705px;
    margin-left: auto;
    margin-right: auto;
  }
}

/*
narrow display: collapse the header (don't show the menu items)
instead, display a burger menu.
*/
@media (max-width: 745px) {
  header {
    display: grid;
    grid-template-areas:
      "social-buttons    social-buttons    hamburger";
    position: sticky;
    top: 0;
    z-index: 1000;
  }

  .menu-icon {
    grid-area: hamburger;
    cursor: pointer;
    display: flex;
    justify-content: flex-end;
    align-items: baseline;
    padding: 30px 20px 30px 0;
    position: relative;
    user-select: none;
    visibility: visible;
  }

  .social {
    grid-area: social-buttons;
  }

  .menu-nav ul {
    display: flex;
    flex-direction: column;
    align-items: center;
  }

  #menu-icon {
    display: inline-block;
    margin-right: 10px;
    margin-top: 5px;
  }

  .menu-nav {
    max-height: 0;
    max-width: unset;
    overflow: hidden;
    transition: max-height 0.2s ease-out;
    margin: 0;
    padding: 0;
    background-color: #fff;
    display: flex;
    flex-direction: column;
    position: fixed;
    top: 60px;
    z-index: 10000;
    left: 0;
    right: 0;
  }

  .menu-btn:checked ~ .menu-nav {
    max-height: 250px;
  }

  .navicon {
    background-color: black;
    display: block;
    position: relative;
    width: 18px;
    height: 2px;
  }

  .navicon:before {
    top: 5px;
  }

  .navicon:after {
    bottom: 5px;
  }

  .navicon:before,
  .navicon:after {
    background-color: black;
    display: block;
    width: 100%;
    height: 100%;
    content: "";
    position: absolute;
    transition: all 0.2s ease-out;
  }

  .menu-btn:checked ~ .menu-icon .navicon {
    background: transparent;
  }

  .menu-btn:checked ~ .menu-icon .navicon:before {
    transform: rotate(-45deg);
  }

  .menu-btn:checked ~ .menu-icon .navicon:after {
    transform: rotate(45deg);
  }

  .menu-btn:checked ~ .menu-icon .navicon:before,
  .menu-btn:checked ~ .menu-icon .navicon:after {
    top: 0;
  }

  .navicon:before,
  .navicon:after {
    transition: all 0.3s ease-out;
  }
}

table {
  line-height: 1em;
  margin-left: auto;
  margin-right: auto;
  border-collapse: collapse;
  text-align: center;
  margin-bottom: 1.5em;
}

tr:first-of-type {
  background: #eae9f4;
}

tr:first-of-type > th {
  text-align: center;
}

tr,
th,
td {
  padding: 10px;
  border: 1px solid lightgray;
}

table tbody tr td {
  border: 1px solid lightgray;
}

.social {
  display: flex;
  font-size: 0.2rem;
  align-items: center;
  padding-left: 0;
}

.social img {
  width: 100%;
}

.social-btn, .social-btn:hover {
  height: 30px;
  width: 30px;
  display: inline-block;
  padding-top: 0;
  padding-bottom: 0;
  margin-right: 5px;
  border-bottom: none;
  align-content: center;
}

.menu-nav {
  text-align: right;
}

ul {
  list-style-type: none;
}

#menu-btn {
  display: none;
  position: absolute;
  top: -100%;
  left: -100%;
}

